--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,151 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:animateLayoutChanges="true"
-    android:background="@color/purple_100"
     tools:context=".MainActivity">
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/card_view"
-        android:layout_width="0dp"
-        android:layout_height="150dp"
-        android:layout_margin="16dp"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="@dimen/corner_radius"
-        app:cardElevation="12dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" >
-
-<androidx.constraintlayout.widget.ConstraintLayout
+<com.airbnb.epoxy.EpoxyRecyclerView
+    android:id="@+id/rv_product_list"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/iv_product"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:background="@color/purple_100"
-        android:scaleType="centerCrop"
-        android:layout_margin="8dp"
-        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerRound"
-        app:layout_constraintDimensionRatio="1:1"
-        tools:src="@tools:sample/backgrounds/scenic[5]"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
-    <androidx.core.widget.ContentLoadingProgressBar
-        android:id="@+id/progress_product_image_loading"
-        android:layout_width="34dp"
-        android:layout_height="34dp"
-        style="?android:attr/progressBarStyleSmall"
-        android:indeterminateOnly="true"
-        app:layout_constraintStart_toStartOf="@id/iv_product"
-        app:layout_constraintEnd_toEndOf="@id/iv_product"
-        app:layout_constraintTop_toTopOf="@id/iv_product"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_favorite"
-        style="@style/Widget.Material3.Button.Icon"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_margin="6dp"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        app:icon="@drawable/ic_favorite"
-        app:iconGravity="textEnd"
-        app:iconSize="12dp"
-        app:layout_constraintTop_toTopOf="@id/iv_product"
-        app:layout_constraintEnd_toEndOf="@id/iv_product" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_product_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="12dp"
-        android:ellipsize="end"
-        android:maxLines="2"
-        tools:text="Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops"
-        android:textColor="@color/purple_700"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="@id/iv_product"
-        app:layout_constraintStart_toEndOf="@id/iv_product"
-         app:layout_constraintEnd_toEndOf="parent"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_product_category"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:maxLines="1"
-        tools:text="men's clothing"
-        android:textColor="@color/purple_500"
-        android:textSize="12sp"
-        android:textStyle="normal"
-        app:layout_constraintTop_toBottomOf="@id/tv_product_title"
-        app:layout_constraintStart_toStartOf="@id/tv_product_title"
-        app:layout_constraintEnd_toEndOf="@id/tv_product_title" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_product_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="$109.95"
-        android:textColor="@color/purple_500"
-        android:textSize="16sp"
-        android:textStyle="normal"
-        app:layout_constraintStart_toStartOf="@id/tv_product_title"
-        app:layout_constraintTop_toTopOf="@id/btn_add_to_card"
-        app:layout_constraintBottom_toBottomOf="@id/btn_add_to_card" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_add_to_card"
-        style="@style/Widget.Material3.Button.Icon"
-        android:layout_width="68dp"
-        android:layout_height="34dp"
-        android:layout_margin="8dp"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        app:cornerRadius="@dimen/corner_radius"
-        app:icon="@drawable/ic_buy"
-        app:iconGravity="textEnd"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_indicate_in_card"
-        style="@style/Widget.Material3.Button.Icon"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:layout_margin="6dp"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        android:backgroundTint="@color/teal_200"
-        app:icon="@drawable/ic_check"
-        app:iconGravity="textEnd"
-        app:iconSize="10dp"
-        app:layout_constraintTop_toTopOf="@id/btn_add_to_card"
-        app:layout_constraintBottom_toBottomOf="@id/btn_add_to_card"
-        app:layout_constraintStart_toStartOf="@id/btn_add_to_card"
-        app:layout_constraintEnd_toStartOf="@id/btn_add_to_card" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
-    </com.google.android.material.card.MaterialCardView>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_product_description"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="12dp"
-        android:layout_marginTop="8dp"
-        tools:text="Your perfect pack for everyday use and walks in the forest. Stash your laptop (up to 15 inches) in the padded sleeve, your everyday"
-        android:textColor="@color/purple_700"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@id/card_view"
-        app:layout_constraintStart_toStartOf="@id/card_view"
-        app:layout_constraintTop_toBottomOf="@id/card_view" />
+    android:layout_height="match_parent"
+    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+    tools:itemCount="7"
+    tools:listitem="@layout/product_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
