--- a/app/src/main/res/layout/fragment_product_list.xml
+++ b/app/src/main/res/layout/fragment_product_list.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.fragments.ProductListFragment">
+    tools:context=".presentation.fragments.ProductListFragment"
+    android:background="@color/purple_100" >
 
     <com.airbnb.epoxy.EpoxyRecyclerView
         android:id="@+id/rv_product_list"
