--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/purple_100"
-    tools:context=".presentation.fragments.CardFragment">
+    tools:context=".presentation.fragments.CartFragment">
 
     <com.airbnb.epoxy.EpoxyRecyclerView
         android:id="@+id/rv_card"
