--- a/app/src/main/res/layout/item_cart_product.xml
+++ b/app/src/main/res/layout/item_cart_product.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    app:cardCornerRadius="@dimen/corner_radius"
+    android:layout_height="wrap_content" >
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/purple_50" >
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_product_cart"
@@ -57,4 +64,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <include
+        android:id="@+id/quantity"
+        layout="@layout/layout_quantity_selector"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@id/iv_delete"
+        app:layout_constraintStart_toStartOf="@id/tv_title_cart"
+        app:layout_constraintTop_toTopOf="@id/iv_delete" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+</com.google.android.material.card.MaterialCardView>
